jena-shex/src/test/files/spec/negativeSyntax/IRIREF-with-ECHAR.shex
# IRIREF with ECHAR
# source: turtle-syntax-bad-uri-04.ttl
<http://a.example/IssueShape> {
   <http://a.example/p1\n> .
}
